--- a/Module_3/Module 3 Tutorial - Functional vs OOP Programming/Module 3 Tutorial - Functional vs OOP Programming Arr.ipynb
+++ b/Module_3/Module 3 Tutorial - Functional vs OOP Programming/Module 3 Tutorial - Functional vs OOP Programming Arr.ipynb
@@ -5,31 +5,21 @@
    "execution_count": 1,
    "id": "547271e2-ef46-4f8b-8f8c-9a384e70e948",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "-1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-   class Solution:
-    # Function to sort an array of 0s, 1s, and 2s
-    def sort012(self, arr):
-        low, mid, high = 0, 0, len(arr) - 1
-        while mid <= high:
-            if arr[mid] == 0:
-                arr[low], arr[mid] = arr[mid], arr[low]
-                low, mid = low + 1, mid + 1
-            elif arr[mid] == 1:
-                mid += 1
-            else:
-                arr[mid], arr[high] = arr[high], arr[mid]
-                high -= 1
+    "class Solution:\n",
+    "    # Function to sort an array of 0s, 1s, and 2s\n",
+    "    def sort012(self, arr):\n",
+    "        low, mid, high = 0, 0, len(arr) - 1\n",
+    "        while mid <= high:\n",
+    "            if arr[mid] == 0:\n",
+    "                arr[low], arr[mid] = arr[mid], arr[low]\n",
+    "                low, mid = low + 1, mid + 1\n",
+    "            elif arr[mid] == 1:\n",
+    "                mid += 1\n",
+    "            else:\n",
+    "                arr[mid], arr[high] = arr[high], arr[mid]\n",
+    "                high -= 1"
    ]
   },
   {
@@ -39,11 +29,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0a00144-3993-4b19-901d-080458641290",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
